finished forecast card layout, need to add icons

--- a/index.html
+++ b/index.html
@@ -57,27 +57,10 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="newbie row" id="forecast-start">
             <div class="5dayforecast col-12 mb-5">
                 <h5 id="forecast-title" class=""> 5 Day Forecast </h5>
-                <div>
-                    <ul class="row card" style="list-style-type:none;">
-                        <li id="list1" class="card-body">
 
-                        <li id="list2" class="card-body">
-                                
-                        </li>
-                        <li id="list3" class="card-body">
-                    </ul>
-                    <ul class="row card" style="list-style-type:none;">
-                        <li id="list1a" class="card-body">
-
-                        <li id="list2a" class="card-body">
-                                
-                        </li>
-                        <li id="list3a" class="card-body">
-                    </ul>
-                </div>
             </div>
         </div>
     </main>
