added history tab

--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
                         </button>
                     </div>
                 </form>
-                <form class=" search-history" id="history">
-                    <ul style="list-style-type:none;">
-                        <li class="city-history">
-
-                        </li>
+                <form class=" search-history">
+                    <ul style="list-style-type:none;" id="history">
+                    
                     </ul>
                     <button class="btn clear-button" type="button" id="clear-history"> Clear History</button>
                 </form>
